[metadata]
name = xipd
version = 0.0.0
author = Tobias Bengfort
author_email = tobias.bengfort@posteo.de
description = a programming language for audio processing that compiles to PureData
long_description = file:README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = xipd

[options.package_data]
* = *.xipd

[options.entry_points]
console_scripts =
    xipd = xipd.__main__:main
    xipd-format = xipd.format:main
